Index system log

--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -159,6 +159,9 @@
                             <li>
                                 <a href="@Url.Action("Index","TaiKhoan", new { area = "Admin" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Danh sách tài khoản</a>
                             </li>
+                            <li>
+                                <a href="@Url.Action("Index","SystemLog", new { area = "Admin" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Danh sách log</a>
+                            </li>
                         </ul>
                     </li>
                 }
