--- a/Vimas/Areas/HocVien/Views/SucKhoe/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/SucKhoe/Index.cshtml
@@ -15,7 +15,7 @@
             {
                 <div class="col-md-5">
                     <div class="col-md-6">
-                        <button class="btn btn-primary pull-right" type="submit" id="btnExport">
+                        <button class="btn btn-primary" type="submit" id="btnExport">
                             <i class="left-icon fa fa-download"></i>   Xuất ra Excel
                         </button>
                     </div>
