--- a/Vimas/Areas/HocVien/Views/SucKhoe/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/SucKhoe/Detail.cshtml
@@ -8,7 +8,7 @@
     <div class="card-header">
         <div class="row">
             <div class="col-md-12">
-                <h3>Chi tiết cáo sức khỏe của: <strong>@this.Model.Name</strong></h3>
+                <h3>Chi tiết báo cáo sức khỏe của: <strong>@this.Model.Name</strong></h3>
             </div>
         </div>
         <hr />
