--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
@@ -938,8 +938,8 @@
                 id: idTTVN,
             },
             success: function (result) {
-                $('#editTTGDPanel').html(result);
-                $('#editTTGDPanel').modal('show');
+                $('#editTTVNPanel').html(result);
+                $('#editTTVNPanel').modal('show');
             },
             error: function (error) {
                 alert("Error Occured")
