--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -111,6 +111,9 @@
                             <a href="@Url.Action("Index","ThongTinCaNhan", new { area = "HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Thông tin học viên</a>
                         </li>
                         <li>
+                            <a href="@Url.Action("Index", "ThongTinDuTuyen" , new { area="HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i>Thông tin dự tuyển</a>
+                        </li>
+                        <li>
                             <a href="@Url.Action("Index","SucKhoe", new { area = "HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Sức Khỏe</a>
                         <li>
                             <a href="@Url.Action("Index", "ThongTinNopTien" , new { area="HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Danh sách thu/chi</a>
