--- a/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
@@ -94,7 +94,7 @@
                         @if (user.IsInRole("Admin") || user.IsInRole("PhongXKLD"))
                         {
                             <text>
-                            var detail = "<a id='detailCongTyChungNghe' class='btn btn-sm btn-primary' href='@Url.Action("Detail", "CongTyChungNghe")\/" + data + "\'><i class='fa fa-eye'></i> Detail</a>";
+                            var detail = "<a id='detailCongTyChungNghe' class='btn btn-sm btn-primary' href='@Url.Action("Detail", "CongTyChungNghe")\/" + data + "\'><i class='glyphicon  glyphicon-info-sign'></i> Detail</a>";
                             var del = "<a id='deleteCongTyChungNghe' class='btn btn-sm btn-danger' onClick='Delete(" + data + ")'><i class='glyphicon glyphicon-trash'></i> Delete</a>";
                             var edit = "<a id='editCongTyChungNghe' class='btn btn-sm btn-primary' href='@Url.Action("Edit", "CongTyChungNghe")\/" + data + "\'><i class='glyphicon glyphicon-pencil'></i> Edit</a>";
                             </text>
