--- a/Vimas/Areas/HocVien/Views/SucKhoe/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/SucKhoe/Index.cshtml
@@ -103,10 +103,10 @@
                         @if (user.IsInRole("Admin") || user.IsInRole("PhongNguon"))
                         {
                             <text>
-                        var detail = "<a class='btn btn-sm btn-primary' href='@Url.Action("Detail", "SucKhoe")\/" + data + "\'><i class='glyphicon glyphicon-info'></i> Detail</a>";
-                        var edit = "<a id='editThongTinCaNhan' class='btn btn-sm btn-success' href='@Url.Action("Edit","SucKhoe")\/" + data + "\'><i class='glyphicon glyphicon-pencil'></i> Edit</a>";
-                        var del = "<a id='editThongTinCaNhan' class='btn btn-sm btn-danger' onClick='Delete(" + data + ")'><i class='glyphicon glyphicon-trash'></i> Delete</a>";
-                        </text>
+                            var detail = "<a class='btn btn-sm btn-primary' href='@Url.Action("Detail", "SucKhoe")\/" + data + "\'><i class='glyphicon  glyphicon-info-sign'></i> Detail</a>";
+                            var edit = "<a id='editThongTinCaNhan' class='btn btn-sm btn-success' href='@Url.Action("Edit","SucKhoe")\/" + data + "\'><i class='glyphicon glyphicon-pencil'></i> Edit</a>";
+                            var del = "<a id='editThongTinCaNhan' class='btn btn-sm btn-danger' onClick='Delete(" + data + ")'><i class='glyphicon glyphicon-trash'></i> Delete</a>";
+                            </text>
                         }
                         else
                         {
