Sửa create thongtinnoptien

--- a/Vimas/Areas/HocVien/Views/ThongTinNopTien/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinNopTien/Index.cshtml
@@ -25,9 +25,9 @@
                         </button>
                     </div>
                     <div class="col-md-6">
-                        <a href="@this.Url.Action("Create")" class="btn btn-primary pull-right">
-                            <i class="left-icon glyphicon glyphicon-plus"></i>   Thêm phiếu thu/chi
-                        </a>
+                        <button onclick="showCreateTTNT()" class="btn btn-primary pull-right ">
+                            <i class="left-icon glyphicon glyphicon-plus"></i> Thêm phiếu thu/chi
+                        </button>
                     </div>
                 </div>
             }
