--- a/Vimas/Areas/HocVien/Views/ThongTinNopTien/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinNopTien/Index.cshtml
@@ -80,12 +80,12 @@
     });
 
     $(document).ready(function () {
-        InitOrderDatatable();
+        InitDatatable();
         //$('#hocVienDatatable_length, #hocVienDatatable_filter, #hocVienDatatable_info, hocVienDatatable_paginate').addClass('display-initial');
         //$('#hocVienDatatable_filter, #hocVienDatatable_paginate').addClass('pull-right');
     });
 
-    function InitOrderDatatable() {
+    function InitDatatable() {
         $("#phieuThuChiDatatable").dataTable({
             "bSort": false,
             "bRetrieve": true,
