--- a/Vimas/Areas/HocVien/Views/BangCap/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/BangCap/Create.cshtml
@@ -11,7 +11,7 @@
             @Html.HiddenFor(q => q.IdThongTinDuTuyen)
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Thêm QTHT</h4>
+                <h4 class="modal-title">Thêm bằng cấp/giấy tờ</h4>
             </div>
             <div class="modal-body">
                 <div class="form-horizontal">
@@ -26,12 +26,14 @@
                         <label class="control-label col-md-4">Tháng</label>
                         <div class="col-md-5">
                             @Html.TextBoxFor(q => q.Thang, new { @class = "form-control col-sm-12" })
+                            @Html.ValidationMessageFor(q => q.Thang)
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-md-4">Năm</label>
                         <div class="col-md-5">
                             @Html.TextBoxFor(q => q.Nam, new { @class = " form-control col-sm-12" })
+                            @Html.ValidationMessageFor(q => q.Nam)
                         </div>
                     </div>
                     <div class="form-group">
@@ -43,7 +45,7 @@
                     <div class="form-group">
                         <label class="control-label col-md-4">Đã nộp</label>
                         <div class="col-md-5">
-                            <input type="checkbox" name="DaNop" id="DaNop" value="true"/>
+                            <input type="checkbox" name="DaNop" id="DaNop" value="true" />
                         </div>
                     </div>
                 </div>
@@ -78,7 +80,7 @@
                     swal("Tạo mới", result.message, "success");
                     $('#createBCPanel').modal('hide');
                     $('#createBCPanel').html("");
-                    RefreshTTNTTable();
+                    RefreshTable('bangCapDatatable');
                 },
                 error: function (error) {
                     swal('Lỗi', error.message, 'error');
