--- a/Vimas/Areas/HocVien/Views/BangCap/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/BangCap/Edit.cshtml
@@ -12,7 +12,7 @@
             @Html.HiddenFor(q => q.IdThongTinDuTuyen)
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Thêm QTHT</h4>
+                <h4 class="modal-title">Sửa bằng cấp/giấy tờ</h4>
             </div>
             <div class="modal-body">
                 <div class="form-horizontal">
@@ -27,12 +27,14 @@
                         <label class="control-label col-md-4">Tháng</label>
                         <div class="col-md-5">
                             @Html.TextBoxFor(q => q.Thang, new { @class = "form-control col-sm-12" })
+                            @Html.ValidationMessageFor(q => q.Thang)
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-md-4">Năm</label>
                         <div class="col-md-5">
                             @Html.TextBoxFor(q => q.Nam, new { @class = " form-control col-sm-12" })
+                            @Html.ValidationMessageFor(q => q.Nam)
                         </div>
                     </div>
                     <div class="form-group">
@@ -79,7 +81,7 @@
                     swal("Lưu", result.message, "success");
                     $('#editBCPanel').modal('hide');
                     $('#editBCPanel').html("");
-                    RefreshTTNTTable();
+                    RefreshTable('bangCapDatatable');
                 },
                 error: function (error) {
                     swal('Lỗi', error.message, 'error');
